[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Green.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Carlito-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/Carlito-BoldItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes and Scripts/Karten.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="Karten" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 544.173
margin_top = 837.224
margin_right = 1550.17
margin_bottom = 1158.22
rect_scale = Vector2( 0.837, 0.678 )
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
margin_right = 1000.0
margin_bottom = 300.0
custom_constants/separation = 50

[node name="1" type="TextureButton" parent="ScrollContainer/HBoxContainer"]
margin_right = 300.0
margin_bottom = 300.0
texture_normal = ExtResource( 1 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="TextureButton" parent="ScrollContainer/HBoxContainer"]
margin_left = 350.0
margin_right = 650.0
margin_bottom = 300.0
texture_normal = ExtResource( 1 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="TextureButton" parent="ScrollContainer/HBoxContainer"]
margin_left = 700.0
margin_right = 1000.0
margin_bottom = 300.0
texture_normal = ExtResource( 1 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Infoübersicht" type="Panel" parent="."]
visible = false
margin_left = 518.0
margin_top = 103.0
margin_right = 1367.0
margin_bottom = 751.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Infoübersicht"]
position = Vector2( 658.053, 233.931 )
scale = Vector2( 0.936938, 1.31989 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Infoübersicht"]
margin_left = 34.0
margin_top = 36.0
margin_right = 501.0
margin_bottom = 442.0
custom_fonts/font = SubResource( 1 )
text = "Dies sind die Vor- und Nachteile dieser Karte: Geld -100 Ansehen -15"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aktivieren" type="Button" parent="Infoübersicht"]
margin_left = 300.4
margin_top = 491.698
margin_right = 567.15
margin_bottom = 536.638
custom_fonts/font = SubResource( 2 )
text = "Aktivieren"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Schließen" type="Button" parent="Infoübersicht"]
margin_left = 300.392
margin_top = 560.32
margin_right = 567.142
margin_bottom = 605.26
custom_fonts/font = SubResource( 2 )
text = "Schließen"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ScrollContainer/HBoxContainer/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="Infoübersicht/Aktivieren" to="." method="_on_Aktivieren_pressed"]
[connection signal="pressed" from="Infoübersicht/Schließen" to="." method="_on_Schlieen_pressed"]
